[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Chuck55",email = "41636138+Chuck55@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "marshmallow (>=4.0.0,<5.0.0)",
    "quart-schema (>=0.22.0,<0.23.0)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
